--- a/jglh/框架内容_11.html
+++ b/jglh/框架内容_11.html
@@ -51,87 +51,312 @@
 
       <!-- 主体 (动态面板) -->
       <div id="u0" class="ax_动态面板" data-label="主体">
-        <div id="u0_state0" class="panel_state" data-label="状态1">
+        <div id="u0_state0" class="panel_state" data-label="首页">
           <div id="u0_state0_content" class="panel_state_content">
 
             <!-- Unnamed (形状) -->
             <div id="u1" class="ax_形状">
-              <img id="u1_img" class="img " src="images/框架内容_2/u1.png"/>
+              <img id="u1_img" class="img " src="images/框架内容_11/u1.png"/>
               <!-- Unnamed () -->
               <div id="u2" class="text">
-                <p><span></span></p>
+                <p><span style="font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';font-weight:200;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; 功能设置</span></p>
               </div>
             </div>
 
-            <!-- Unnamed (形状) -->
-            <div id="u3" class="ax_h2">
-              <img id="u3_img" class="img " src="resources/images/transparent.gif"/>
+            <!-- Unnamed (图片) -->
+            <div id="u3" class="ax_图片">
+              <img id="u3_img" class="img " src="images/框架内容_11/u3.png"/>
               <!-- Unnamed () -->
               <div id="u4" class="text">
-                <p><span>交广要闻</span></p>
+                <p><span></span></p>
               </div>
             </div>
 
-            <!-- Unnamed (图片) -->
-            <div id="u5" class="ax_图片">
-              <img id="u5_img" class="img " src="images/框架内容_2/u3.png"/>
+            <!-- Unnamed (形状) -->
+            <div id="u5" class="ax_形状">
+              <img id="u5_img" class="img " src="images/框架内容_11/u5.png"/>
               <!-- Unnamed () -->
               <div id="u6" class="text">
+                <p><span style="font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';font-weight:200;">ico</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u7" class="ax_形状">
+              <img id="u7_img" class="img " src="images/框架内容_11/u7.png"/>
+              <!-- Unnamed () -->
+              <div id="u8" class="text">
+                <p><span>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; 分享软件</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (图片) -->
+            <div id="u9" class="ax_图片">
+              <img id="u9_img" class="img " src="images/框架内容_11/u3.png"/>
+              <!-- Unnamed () -->
+              <div id="u10" class="text">
+                <p><span></span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u11" class="ax_形状">
+              <img id="u11_img" class="img " src="images/框架内容_11/u5.png"/>
+              <!-- Unnamed () -->
+              <div id="u12" class="text">
+                <p><span>ico</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u13" class="ax_形状">
+              <img id="u13_img" class="img " src="images/框架内容_11/u1.png"/>
+              <!-- Unnamed () -->
+              <div id="u14" class="text">
+                <p><span>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; 我的消息</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (图片) -->
+            <div id="u15" class="ax_图片">
+              <img id="u15_img" class="img " src="images/框架内容_11/u3.png"/>
+              <!-- Unnamed () -->
+              <div id="u16" class="text">
+                <p><span></span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u17" class="ax_形状">
+              <img id="u17_img" class="img " src="images/框架内容_11/u5.png"/>
+              <!-- Unnamed () -->
+              <div id="u18" class="text">
+                <p><span style="font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';font-weight:200;">ico</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u19" class="ax_形状">
+              <img id="u19_img" class="img " src="images/框架内容_11/u7.png"/>
+              <!-- Unnamed () -->
+              <div id="u20" class="text">
+                <p><span>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; 我的活动</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (图片) -->
+            <div id="u21" class="ax_图片">
+              <img id="u21_img" class="img " src="images/框架内容_11/u3.png"/>
+              <!-- Unnamed () -->
+              <div id="u22" class="text">
+                <p><span></span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u23" class="ax_形状">
+              <img id="u23_img" class="img " src="images/框架内容_11/u5.png"/>
+              <!-- Unnamed () -->
+              <div id="u24" class="text">
+                <p><span style="font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';font-weight:200;">ico</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u25" class="ax_形状">
+              <img id="u25_img" class="img " src="images/框架内容_11/u25.png"/>
+              <!-- Unnamed () -->
+              <div id="u26" class="text">
+                <p><span>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; 我的订单</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (图片) -->
+            <div id="u27" class="ax_图片">
+              <img id="u27_img" class="img " src="images/框架内容_11/u3.png"/>
+              <!-- Unnamed () -->
+              <div id="u28" class="text">
+                <p><span></span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u29" class="ax_形状">
+              <img id="u29_img" class="img " src="images/框架内容_11/u5.png"/>
+              <!-- Unnamed () -->
+              <div id="u30" class="text">
+                <p><span style="font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';font-weight:200;">ico</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u31" class="ax_形状">
+              <img id="u31_img" class="img " src="images/框架内容_11/u31.png"/>
+              <!-- Unnamed () -->
+              <div id="u32" class="text">
                 <p><span></span></p>
               </div>
             </div>
 
             <!-- Unnamed (图片) -->
-            <div id="u7" class="ax_图片">
-              <img id="u7_img" class="img " src="images/框架内容_2/u37.png"/>
+            <div id="u33" class="ax_图片">
+              <img id="u33_img" class="img " src="images/框架内容_11/u33.png"/>
               <!-- Unnamed () -->
-              <div id="u8" class="text">
+              <div id="u34" class="text">
                 <p><span></span></p>
               </div>
             </div>
 
             <!-- Unnamed (形状) -->
-            <div id="u9" class="ax_形状">
-              <img id="u9_img" class="img " src="images/框架内容_9/u9.png"/>
+            <div id="u35" class="ax_形状">
+              <img id="u35_img" class="img " src="images/框架内容_11/u35.png"/>
               <!-- Unnamed () -->
-              <div id="u10" class="text">
-                <p><span>资讯配图</span></p>
+              <div id="u36" class="text">
+                <p><span>用户昵称</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Hot Spot) -->
+            <div id="u37" class="ax_hot_spot">
+            </div>
+
+            <!-- Unnamed (Hot Spot) -->
+            <div id="u38" class="ax_hot_spot">
+            </div>
+
+            <!-- Unnamed (底部导航) -->
+
+            <!-- 底部导航 (动态面板) -->
+            <div id="u40" class="ax_动态面板" data-label="底部导航">
+              <div id="u40_state0" class="panel_state" data-label="状态1">
+                <div id="u40_state0_content" class="panel_state_content">
+
+                  <!-- Unnamed (形状) -->
+                  <div id="u41" class="ax_形状">
+                    <img id="u41_img" class="img " src="images/框架内容/u34.png"/>
+                    <!-- Unnamed () -->
+                    <div id="u42" class="text">
+                      <p><span></span></p>
+                    </div>
+                  </div>
+
+                  <!-- Unnamed (形状) -->
+                  <div id="u43" class="ax_形状">
+                    <img id="u43_img" class="img " src="images/框架内容/u36.png"/>
+                    <!-- Unnamed () -->
+                    <div id="u44" class="text">
+                      <p><span>ico</span></p>
+                    </div>
+                  </div>
+
+                  <!-- paragraph (形状) -->
+                  <div id="u45" class="ax_文本" data-label="paragraph">
+                    <img id="u45_img" class="img " src="resources/images/transparent.gif"/>
+                    <!-- Unnamed () -->
+                    <div id="u46" class="text">
+                      <p><span>路况</span></p>
+                    </div>
+                  </div>
+
+                  <!-- Unnamed (形状) -->
+                  <div id="u47" class="ax_形状">
+                    <img id="u47_img" class="img " src="images/框架内容/u36.png"/>
+                    <!-- Unnamed () -->
+                    <div id="u48" class="text">
+                      <p><span>ico</span></p>
+                    </div>
+                  </div>
+
+                  <!-- paragraph (形状) -->
+                  <div id="u49" class="ax_文本" data-label="paragraph">
+                    <img id="u49_img" class="img " src="resources/images/transparent.gif"/>
+                    <!-- Unnamed () -->
+                    <div id="u50" class="text">
+                      <p><span>直播</span></p>
+                    </div>
+                  </div>
+
+                  <!-- Unnamed (形状) -->
+                  <div id="u51" class="ax_形状">
+                    <img id="u51_img" class="img " src="images/框架内容/u36.png"/>
+                    <!-- Unnamed () -->
+                    <div id="u52" class="text">
+                      <p><span>ico</span></p>
+                    </div>
+                  </div>
+
+                  <!-- paragraph (形状) -->
+                  <div id="u53" class="ax_文本" data-label="paragraph">
+                    <img id="u53_img" class="img " src="resources/images/transparent.gif"/>
+                    <!-- Unnamed () -->
+                    <div id="u54" class="text">
+                      <p><span>发现</span></p>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
 
             <!-- Unnamed (形状) -->
-            <div id="u11" class="ax_文本">
-              <img id="u11_img" class="img " src="resources/images/transparent.gif"/>
+            <div id="u55" class="ax_形状">
+              <img id="u55_img" class="img " src="images/框架内容_2/u1.png"/>
               <!-- Unnamed () -->
-              <div id="u12" class="text">
-                <p><span>轿车撞倒男孩拖行母亲300米，两人当场死亡！司机肇事逃逸！</span></p>
+              <div id="u56" class="text">
+                <p><span></span></p>
               </div>
             </div>
 
             <!-- Unnamed (形状) -->
-            <div id="u13" class="ax_文本">
-              <img id="u13_img" class="img " src="resources/images/transparent.gif"/>
+            <div id="u57" class="ax_h2">
+              <img id="u57_img" class="img " src="resources/images/transparent.gif"/>
               <!-- Unnamed () -->
-              <div id="u14" class="text">
-                <p><span>分类：头条新闻</span></p>
+              <div id="u58" class="text">
+                <p><span>我的</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (图片) -->
+            <div id="u59" class="ax_图片">
+              <img id="u59_img" class="img " src="images/框架内容_2/u3.png"/>
+              <!-- Unnamed () -->
+              <div id="u60" class="text">
+                <p><span></span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (图片) -->
+            <div id="u61" class="ax_图片">
+              <img id="u61_img" class="img " src="images/框架内容_2/u37.png"/>
+              <!-- Unnamed () -->
+              <div id="u62" class="text">
+                <p><span></span></p>
               </div>
             </div>
 
             <!-- Unnamed (形状) -->
-            <div id="u15" class="ax_文本">
-              <img id="u15_img" class="img " src="resources/images/transparent.gif"/>
+            <div id="u63" class="ax_形状">
+              <img id="u63_img" class="img " src="images/框架内容_11/u7.png"/>
               <!-- Unnamed () -->
-              <div id="u16" class="text">
-                <p><span>导语</span></p><p><span>5月31日晚9时许，长春市迎宾路与西环城路交会处西侧，一对母子在过马路时被一辆白色轿车撞上，当场身亡。随后，肇事司机驾车逃逸。目前长春交警已发出协查通报，征集事故线索。</span></p><p><span>&nbsp;</span></p><p><span>白色轿车撞一对母子后逃逸</span></p><p><span>5月31日晚10时30分许，记者赶到事发现场，此时两名死者已被送往附近殡仪馆。据知情人士介绍，事发地点位于迎宾路上的铁路桥下，肇事车辆是一白色轿车。“死者是一对母子，女的40多岁，男孩10岁左右。”一名目击者称，事发后，男孩躺在了铁路桥下，而女子则被肇事车辆拖出了近300米远，“应该是轿车撞倒孩子后没有停车，又撞上了孩子母亲。”</span></p><p><span>在事发的两处现场，记者均未发现刹车痕迹，而民警正在勘查现场。</span></p><p><span>&nbsp;</span></p><p><span>印数千份宣传单 寻找线索</span></p><p><span>“我们连夜印制了几千份寻找目击证人的宣传单，正在往各个修配厂发放，现在整个绿园区的修配厂都发了。”小李说，从交警查到的监控视频来看，肇事车辆是一台白色老款的雷克萨斯牌轿车，“从事故现场来看，这辆车损坏了，无论他是拆解还是修理，都得去修配厂，所以我们就先从修配厂入手。”</span></p><p><span>小李说，除了绿园区，她和家人还会继续将告示贴下去，“如果有人提供线索，帮助警方破案，我们全家一定重谢。”</span></p><p><span>&nbsp;</span></p><p><span>警方万元征集线索</span></p><p><span>6月1日下午，长春市公安局交警支队绿园大队向社会发布了协查通报：5月31日晚上9时15分，一辆车牌号为吉A36E69的白色雷克萨斯轿车(已确认为套牌车)由东向西行驶至长春市绿园区迎宾路城西派出所附近，将两名正在过马路的行人撞飞，两人当场死亡。据警方调查取证后证实，被该套牌车撞飞的是一对母子，男孩当场死亡。孩子的母亲被撞飞后跌落在车子的后备箱盖上，但是肇事车辆仍未停下来，而是带着女子一路狂奔，行驶300米后女子从车上跌落地上。目前，长春警方面向广大市民征集重要线索，有重要线索可直接拨打110报警，同时，警方将奖励提供重要线索的市民1万元。</span></p><p><span>&nbsp;</span></p><p><span>【来源：新文化报】</span></p>
+              <div id="u64" class="text">
+                <p><span>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; 我的预约</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (图片) -->
+            <div id="u65" class="ax_图片">
+              <img id="u65_img" class="img " src="images/框架内容_11/u3.png"/>
+              <!-- Unnamed () -->
+              <div id="u66" class="text">
+                <p><span></span></p>
               </div>
             </div>
 
             <!-- Unnamed (形状) -->
-            <div id="u17" class="ax_文本">
-              <img id="u17_img" class="img " src="resources/images/transparent.gif"/>
+            <div id="u67" class="ax_形状">
+              <img id="u67_img" class="img " src="images/框架内容_11/u5.png"/>
               <!-- Unnamed () -->
-              <div id="u18" class="text">
-                <p><span>2015-06-03&nbsp; </span></p>
+              <div id="u68" class="text">
+                <p><span style="font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';font-weight:200;">ico</span></p>
               </div>
             </div>
           </div>
