--- a/jglh/框架内容_12.html
+++ b/jglh/框架内容_12.html
@@ -56,307 +56,134 @@
 
             <!-- Unnamed (形状) -->
             <div id="u1" class="ax_形状">
-              <img id="u1_img" class="img " src="images/框架内容_12/u1.png"/>
+              <img id="u1_img" class="img " src="images/框架内容_2/u1.png"/>
               <!-- Unnamed () -->
               <div id="u2" class="text">
-                <p><span style="font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';font-weight:200;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; 功能设置</span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (图片) -->
-            <div id="u3" class="ax_图片">
-              <img id="u3_img" class="img " src="images/框架内容_12/u3.png"/>
-              <!-- Unnamed () -->
-              <div id="u4" class="text">
                 <p><span></span></p>
               </div>
             </div>
 
             <!-- Unnamed (形状) -->
-            <div id="u5" class="ax_形状">
-              <img id="u5_img" class="img " src="images/框架内容_12/u5.png"/>
+            <div id="u3" class="ax_h2">
+              <img id="u3_img" class="img " src="resources/images/transparent.gif"/>
               <!-- Unnamed () -->
-              <div id="u6" class="text">
-                <p><span style="font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';font-weight:200;">ico</span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (形状) -->
-            <div id="u7" class="ax_形状">
-              <img id="u7_img" class="img " src="images/框架内容_12/u7.png"/>
-              <!-- Unnamed () -->
-              <div id="u8" class="text">
-                <p><span>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; 分享软件</span></p>
+              <div id="u4" class="text">
+                <p><span>我的活动</span></p>
               </div>
             </div>
 
             <!-- Unnamed (图片) -->
-            <div id="u9" class="ax_图片">
-              <img id="u9_img" class="img " src="images/框架内容_12/u3.png"/>
+            <div id="u5" class="ax_图片">
+              <img id="u5_img" class="img " src="images/框架内容_2/u3.png"/>
+              <!-- Unnamed () -->
+              <div id="u6" class="text">
+                <p><span></span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (图片) -->
+            <div id="u7" class="ax_图片">
+              <img id="u7_img" class="img " src="images/框架内容_2/u37.png"/>
+              <!-- Unnamed () -->
+              <div id="u8" class="text">
+                <p><span></span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u9" class="ax_形状">
+              <img id="u9_img" class="img " src="images/框架内容_12/u9.png"/>
               <!-- Unnamed () -->
               <div id="u10" class="text">
                 <p><span></span></p>
               </div>
             </div>
 
-            <!-- Unnamed (形状) -->
-            <div id="u11" class="ax_形状">
-              <img id="u11_img" class="img " src="images/框架内容_12/u5.png"/>
-              <!-- Unnamed () -->
-              <div id="u12" class="text">
-                <p><span>ico</span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (形状) -->
-            <div id="u13" class="ax_形状">
-              <img id="u13_img" class="img " src="images/框架内容_12/u1.png"/>
-              <!-- Unnamed () -->
-              <div id="u14" class="text">
-                <p><span>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; 我的消息</span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (图片) -->
-            <div id="u15" class="ax_图片">
-              <img id="u15_img" class="img " src="images/框架内容_12/u3.png"/>
-              <!-- Unnamed () -->
-              <div id="u16" class="text">
-                <p><span></span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (形状) -->
-            <div id="u17" class="ax_形状">
-              <img id="u17_img" class="img " src="images/框架内容_12/u5.png"/>
-              <!-- Unnamed () -->
-              <div id="u18" class="text">
-                <p><span style="font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';font-weight:200;">ico</span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (形状) -->
-            <div id="u19" class="ax_形状">
-              <img id="u19_img" class="img " src="images/框架内容_12/u7.png"/>
-              <!-- Unnamed () -->
-              <div id="u20" class="text">
-                <p><span>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; 我的活动</span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (图片) -->
-            <div id="u21" class="ax_图片">
-              <img id="u21_img" class="img " src="images/框架内容_12/u3.png"/>
-              <!-- Unnamed () -->
-              <div id="u22" class="text">
-                <p><span></span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (形状) -->
-            <div id="u23" class="ax_形状">
-              <img id="u23_img" class="img " src="images/框架内容_12/u5.png"/>
-              <!-- Unnamed () -->
-              <div id="u24" class="text">
-                <p><span style="font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';font-weight:200;">ico</span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (形状) -->
-            <div id="u25" class="ax_形状">
-              <img id="u25_img" class="img " src="images/框架内容_12/u25.png"/>
-              <!-- Unnamed () -->
-              <div id="u26" class="text">
-                <p><span>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; 我的订单</span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (图片) -->
-            <div id="u27" class="ax_图片">
-              <img id="u27_img" class="img " src="images/框架内容_12/u3.png"/>
-              <!-- Unnamed () -->
-              <div id="u28" class="text">
-                <p><span></span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (形状) -->
-            <div id="u29" class="ax_形状">
-              <img id="u29_img" class="img " src="images/框架内容_12/u5.png"/>
-              <!-- Unnamed () -->
-              <div id="u30" class="text">
-                <p><span style="font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';font-weight:200;">ico</span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (形状) -->
-            <div id="u31" class="ax_形状">
-              <img id="u31_img" class="img " src="images/框架内容_12/u31.png"/>
-              <!-- Unnamed () -->
-              <div id="u32" class="text">
-                <p><span></span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (图片) -->
-            <div id="u33" class="ax_图片">
-              <img id="u33_img" class="img " src="images/框架内容_12/u33.png"/>
-              <!-- Unnamed () -->
-              <div id="u34" class="text">
-                <p><span></span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (形状) -->
-            <div id="u35" class="ax_形状">
-              <img id="u35_img" class="img " src="images/框架内容_12/u35.png"/>
-              <!-- Unnamed () -->
-              <div id="u36" class="text">
-                <p><span>用户昵称</span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (Hot Spot) -->
-            <div id="u37" class="ax_hot_spot">
-            </div>
-
-            <!-- Unnamed (Hot Spot) -->
-            <div id="u38" class="ax_hot_spot">
-            </div>
-
-            <!-- Unnamed (底部导航) -->
-
-            <!-- 底部导航 (动态面板) -->
-            <div id="u40" class="ax_动态面板" data-label="底部导航">
-              <div id="u40_state0" class="panel_state" data-label="状态1">
-                <div id="u40_state0_content" class="panel_state_content">
+            <!-- 活动咨询 (动态面板) -->
+            <div id="u11" class="ax_动态面板" data-label="活动咨询">
+              <div id="u11_state0" class="panel_state" data-label="状态1">
+                <div id="u11_state0_content" class="panel_state_content">
 
                   <!-- Unnamed (形状) -->
-                  <div id="u41" class="ax_形状">
-                    <img id="u41_img" class="img " src="images/框架内容/u34.png"/>
+                  <div id="u12" class="ax_形状">
+                    <img id="u12_img" class="img " src="images/框架内容_8/u12.png"/>
                     <!-- Unnamed () -->
-                    <div id="u42" class="text">
+                    <div id="u13" class="text">
                       <p><span></span></p>
                     </div>
                   </div>
 
                   <!-- Unnamed (形状) -->
-                  <div id="u43" class="ax_形状">
-                    <img id="u43_img" class="img " src="images/框架内容/u36.png"/>
+                  <div id="u14" class="ax_形状">
+                    <img id="u14_img" class="img " src="images/框架内容_8/u14.png"/>
                     <!-- Unnamed () -->
-                    <div id="u44" class="text">
-                      <p><span>ico</span></p>
-                    </div>
-                  </div>
-
-                  <!-- paragraph (形状) -->
-                  <div id="u45" class="ax_文本" data-label="paragraph">
-                    <img id="u45_img" class="img " src="resources/images/transparent.gif"/>
-                    <!-- Unnamed () -->
-                    <div id="u46" class="text">
-                      <p><span>路况</span></p>
+                    <div id="u15" class="text">
+                      <p><span></span></p>
                     </div>
                   </div>
 
                   <!-- Unnamed (形状) -->
-                  <div id="u47" class="ax_形状">
-                    <img id="u47_img" class="img " src="images/框架内容/u36.png"/>
+                  <div id="u16" class="ax_文本">
+                    <img id="u16_img" class="img " src="resources/images/transparent.gif"/>
                     <!-- Unnamed () -->
-                    <div id="u48" class="text">
-                      <p><span>ico</span></p>
-                    </div>
-                  </div>
-
-                  <!-- paragraph (形状) -->
-                  <div id="u49" class="ax_文本" data-label="paragraph">
-                    <img id="u49_img" class="img " src="resources/images/transparent.gif"/>
-                    <!-- Unnamed () -->
-                    <div id="u50" class="text">
-                      <p><span>直播</span></p>
+                    <div id="u17" class="text">
+                      <p><span>红花送不停，助力赢大奖</span></p>
                     </div>
                   </div>
 
                   <!-- Unnamed (形状) -->
-                  <div id="u51" class="ax_形状">
-                    <img id="u51_img" class="img " src="images/框架内容/u36.png"/>
+                  <div id="u18" class="ax_文本">
+                    <img id="u18_img" class="img " src="resources/images/transparent.gif"/>
                     <!-- Unnamed () -->
-                    <div id="u52" class="text">
-                      <p><span>ico</span></p>
+                    <div id="u19" class="text">
+                      <p><span>活动正文活动正文活动正文活动正文活动正文活动正文活动正文.......</span></p>
                     </div>
                   </div>
 
-                  <!-- paragraph (形状) -->
-                  <div id="u53" class="ax_文本" data-label="paragraph">
-                    <img id="u53_img" class="img " src="resources/images/transparent.gif"/>
+                  <!-- Unnamed (形状) -->
+                  <div id="u20" class="ax_形状">
+                    <img id="u20_img" class="img " src="images/框架内容_8/u12.png"/>
                     <!-- Unnamed () -->
-                    <div id="u54" class="text">
-                      <p><span>发现</span></p>
+                    <div id="u21" class="text">
+                      <p><span></span></p>
                     </div>
+                  </div>
+
+                  <!-- Unnamed (形状) -->
+                  <div id="u22" class="ax_形状">
+                    <img id="u22_img" class="img " src="images/框架内容_8/u14.png"/>
+                    <!-- Unnamed () -->
+                    <div id="u23" class="text">
+                      <p><span></span></p>
+                    </div>
+                  </div>
+
+                  <!-- Unnamed (形状) -->
+                  <div id="u24" class="ax_文本">
+                    <img id="u24_img" class="img " src="resources/images/transparent.gif"/>
+                    <!-- Unnamed () -->
+                    <div id="u25" class="text">
+                      <p><span>交通广播2015萌宝秀评选</span></p>
+                    </div>
+                  </div>
+
+                  <!-- Unnamed (形状) -->
+                  <div id="u26" class="ax_文本">
+                    <img id="u26_img" class="img " src="resources/images/transparent.gif"/>
+                    <!-- Unnamed () -->
+                    <div id="u27" class="text">
+                      <p><span>活动正文活动正文活动正文活动正文活动正文活动正文活动正文.......</span></p>
+                    </div>
+                  </div>
+
+                  <!-- Unnamed (Hot Spot) -->
+                  <div id="u28" class="ax_hot_spot">
+                  </div>
+
+                  <!-- Unnamed (Hot Spot) -->
+                  <div id="u29" class="ax_hot_spot">
                   </div>
                 </div>
-              </div>
-            </div>
-
-            <!-- Unnamed (形状) -->
-            <div id="u55" class="ax_形状">
-              <img id="u55_img" class="img " src="images/框架内容_2/u1.png"/>
-              <!-- Unnamed () -->
-              <div id="u56" class="text">
-                <p><span></span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (形状) -->
-            <div id="u57" class="ax_h2">
-              <img id="u57_img" class="img " src="resources/images/transparent.gif"/>
-              <!-- Unnamed () -->
-              <div id="u58" class="text">
-                <p><span>我的</span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (图片) -->
-            <div id="u59" class="ax_图片">
-              <img id="u59_img" class="img " src="images/框架内容_2/u3.png"/>
-              <!-- Unnamed () -->
-              <div id="u60" class="text">
-                <p><span></span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (图片) -->
-            <div id="u61" class="ax_图片">
-              <img id="u61_img" class="img " src="images/框架内容_2/u37.png"/>
-              <!-- Unnamed () -->
-              <div id="u62" class="text">
-                <p><span></span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (形状) -->
-            <div id="u63" class="ax_形状">
-              <img id="u63_img" class="img " src="images/框架内容_12/u7.png"/>
-              <!-- Unnamed () -->
-              <div id="u64" class="text">
-                <p><span>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; 我的预约</span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (图片) -->
-            <div id="u65" class="ax_图片">
-              <img id="u65_img" class="img " src="images/框架内容_12/u3.png"/>
-              <!-- Unnamed () -->
-              <div id="u66" class="text">
-                <p><span></span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (形状) -->
-            <div id="u67" class="ax_形状">
-              <img id="u67_img" class="img " src="images/框架内容_12/u5.png"/>
-              <!-- Unnamed () -->
-              <div id="u68" class="text">
-                <p><span style="font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';font-weight:200;">ico</span></p>
               </div>
             </div>
           </div>
